--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,6 @@
     <title>UFO Sightings</title>
 </head>
 <body>
-<a href="{{filename}}">{{filename}}</a>
+<a href="{{fileName}}">{{fileName}}</a>
 </body>
 </html>
