--- a/views/sqlite.hbs
+++ b/views/sqlite.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{filename}}</title>
+    <title>{{fileName}}</title>
     <style>
         .table tr.pk{
             font-weight: bold;
@@ -11,7 +11,7 @@
 </head>
 <body>
 {{#each tables}}
-    <h3><a href="{{../filename}}/{{name}}">{{name}}</a></h3>
+    <h3><a href="{{../fileName}}/{{name}}">{{name}}</a></h3>
     <table class="table">
         <tr>
             <th>Column Name</th>
